sample-webpack/demo-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-webpack
    app.kubernetes.io/name: sample-webpack
  name: sample-webpack
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: sample-webpack
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sample-webpack
        app.kubernetes.io/name: sample-webpack
        version: v0.3.9
    spec:
      containers:
      - env:
        - name: CONFIGMAP_HASH
          value: c5548d211ada58e1fdaf770e8a616dbc
        - name: SECRET_HASH
          value: ''
        image: nalbam/sample-webpack:v0.3.9
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: sample-webpack
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 110m
            memory: 134Mi
          requests:
            cpu: 100m
            memory: 120Mi
